# CYBERSURITER

./: .gitignore  Dockerfile  README.md  TOOLKIT_CENTRAL.py  VPN_GUIDE.md  nixpacks.toml  package.json  pyproject.toml  railway.toml  requirements.txt  web_app.py
01_CONTROLE_TELEPHONE/: MEGA_PHONE_CONTROLLER.py  OUTIL_COMPLET_TELEPHONE.py  WAVE_AUTO_TRANSFERT.py  notifier_phone.py  transfert_wave_auto.py
01_CONTROLE_TELEPHONE/AndroidLab/: android_hacking_lab.ps1
01_CONTROLE_TELEPHONE/MonitorPhone/: phone_monitor.ps1
01_CONTROLE_TELEPHONE/PhoneTools/: notification_sender.py
03_RESEAU_ET_VPN/: CONNEXION_DISTANCE_INFO.md
03_RESEAU_ET_VPN/SecurityScripts/: check_installers.py  link_analyzer.py  network_scanner.py  password_tools.py  phone_controller.py  security_audit.py  spyware_detector.py  web_security_tester.py  whatsapp_audit.py
03_RESEAU_ET_VPN/VPN_Config/: TAILSCALE_SIMPLE.md  client_private.key  client_public.key  server_private.key  server_public.key  setup_vpn_server.ps1  wg_client.conf
04_PHISHING_ET_TESTS/: LABO_APPRENTISSAGE_SECURITE.py
04_PHISHING_ET_TESTS/HackingTools/: EVIL_TWIN_WIFI.py  EXTRACTION_COMPLETE.py  NETWORK_SCANNER.py  PASSWORD_CRACKER.py  WIFI_PASSWORD_CRACKER.py  brute_force_demo.py  extraction_reelle_v2.py  hacking_toolkit.py  keylogger_demo.py  phone_hacking_lab.py  port_scanner.py  reverse_shell_demo.py  (+4 more)
05_GUIDES_ET_DOCS/: GUIDE_CYBERSECURITE_COMPLET.md
08_HACKING_LAB/: LAB_LAUNCHER.py  README.md  phone_info_import.py
CORBEILLE_A_TRIER/: RANSOM_NOTE.txt  malware_demo.txt  ransom.txt  test.txt
VPN_Config/: wg_server.conf
(+30 files in other folders)
